--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.36.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-mongo-sanitize": "^2.2.0",
@@ -57,6 +58,6 @@
     "prettier": "^3.2.5"
   },
   "engines": {
-    "node": ">= 10.0.0"
+    "node": "^20"
   }
 }
